--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation project(':multi-image-selector')
     implementation project(':sys_camera')
+
+    implementation 'com.itxiaox:cameraview:1.0.0'
 //    compile 'com.itxiaox:multi-image-selector:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
