--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ allprojects {
     repositories {
         jcenter()
         google()
-
         maven {
-            url 'https://dl.bintray.com/itxiaox/android'
+            url = "https://dl.bintray.com/itxiaox/android"
         }
     }
 }
