--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "me.itxiaox.multiimageselector"
         minSdkVersion 22
-        targetSdkVersion 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -20,11 +20,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation project(':multi-image-selector')
-    implementation project(':sys_camera')
-
-    implementation 'com.itxiaox:cameraview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation project(':multi-picture')
+    implementation project(':picture')
+//    implementation 'com.itxiaox:cameraview:1.0.0'
 //    compile 'com.itxiaox:multi-image-selector:1.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
+apply from :"../publishAndroidLib.gradle"
