--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.novoda:bintray-release:0.8.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,8 +17,5 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven {
-            url = "https://dl.bintray.com/itxiaox/android"
-        }
     }
 }
