修改动态权限

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 //    implementation project(':picture')
     implementation "com.github.itxiaox.photo:multi-picture:0.0.5"
     implementation "com.github.itxiaox.photo:picture:0.0.5"
-//    implementation 'com.itxiaox:cameraview:1.0.0'
-//    compile 'com.itxiaox:multi-image-selector:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    annotationProcessor  "com.github.itxiaox.permission:permission-processor:1.0.0"
+    implementation  "com.github.itxiaox.permission:android-permission:1.0.0"
 }
